@@ -16,6 +16,7 @@ import org.springframework.web.bind.annotation.RestController;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(value = "/coach")
@@ -52,7 +53,7 @@ public class CoachController {
                         )
                     )
                 )
-            ).stream().toList(),
+            ).stream().collect(Collectors.toList()),
             HttpStatus.OK
         );
     }
