@@ -16,6 +16,7 @@ import org.springframework.web.bind.annotation.RestController;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(value = "/route")
@@ -48,7 +49,7 @@ public class RouteController {
                         ))
                     )
                 )
-            ).stream().toList(),
+            ).stream().collect(Collectors.toList()),
             HttpStatus.OK
         );
     }
